@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2013-05-18"
+#define RUBY_RELEASE_DATE "2013-06-27"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20130518
-#define RUBY_PATCHLEVEL 372
+#define RUBY_RELEASE_CODE 20130627
+#define RUBY_PATCHLEVEL 373
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2013
-#define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 18
+#define RUBY_RELEASE_MONTH 6
+#define RUBY_RELEASE_DAY 27
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
